<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.citrusdynamics.citrus.MainActivity"
    android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
    >



    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:id="@+id/signup"
        android:layout_below="@+id/signintext"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sign_up_for_a_free_citrus_user_account"
        android:id="@+id/signuptext"
        android:textColor="#000000"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/signup"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@+id/citruslogo" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/sign_in"
        android:id="@+id/signin"
        android:layout_below="@+id/citruslogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"

        android:textColor="#000000"
        />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/existing_users_may_sign_in"
        android:id="@+id/signintext"
        android:textColor="#000000"
        android:layout_below="@id/signin"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true" />


    <ImageView
        android:id="@+id/citruslogo"
        android:src="@drawable/citruslogocolor"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_of_citrus_dynamics" />


</RelativeLayout>

